# data-engineering-zoomcamp

./: .gitignore  README.md
01-docker-terraform/: Readme.md  homework Docker and SQL.md
01-docker-terraform/pipeline/: Dockerfile_homework  docker-compose-homework.yaml  flowchart.mmd  ingest_data_homework.py  notebook_homework.ipynb  notebook_zones.ipynb  pipeline.py  pyproject.toml
02-workflow-orchestration/: Readme.md
02-workflow-orchestration/flows/: 09_gcp_taxi_scheduled.yaml
03-data-warehouse/: DLT_upload_to_GCP.ipynb  README.md  main.py  pyproject.toml
04-analytics-engineering/: README.md  cloud_setup.md  load_yellow_taxi_data.py  pyproject.toml
05-data-platforms/: README.md
06-batch/: README.md  homework.md  main.py  pyproject.toml  q2.py  q3.py  q4.py  q6.py  schema_check.py  test_spark.py
06-batch/yellow_2025_11_repartitioned/: .part-00000-0ba5980f-7f8b-4a65-bd3c-6694d97a0316-c000.snappy.parquet.crc  .part-00001-0ba5980f-7f8b-4a65-bd3c-6694d97a0316-c000.snappy.parquet.crc  .part-00002-0ba5980f-7f8b-4a65-bd3c-6694d97a0316-c000.snappy.parquet.crc  .part-00003-0ba5980f-7f8b-4a65-bd3c-6694d97a0316-c000.snappy.parquet.crc
07-stream/: README.md
pipeline/: Dockerfile  docker-compose.yml  ingest_data.py  notebook.ipynb  notebook_zones.ipynb
test/: list_files.py
workshop/my-dlt-pipeline/: README.md  main.py  open_library_pipeline.py  pyproject.toml  test_imports.py  top_authors.py
workshop/streaming/: docker-compose.yml  homework.md  main.py  pyproject.toml  streaming.ipynb
workshop/taxi-pipeline/: README.md  main.py  payment_types.py  (+2 more)
(+20 files in other folders)
