[project]
name = "03-data-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dlt[bigquery,duckdb,gs]>=1.21.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.0",
    "requests>=2.32.5",
]
